cis 1.14/ingress resources/dev-checkin/single_service_ingress_tls.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    virtual-server.f5.com/ip: 172.16.3.3
    kubernetes.io/ingress.class: "f5"
  name: k8s13
spec:
  backend:
    serviceName: svc1
    servicePort: 8080
  tls:
  - secretName: test-secret
